<resources>
    <string name="app_name">Appointment Book</string>
    <string name="help">HELP</string>
    <string name="owner_name">ENTER THE OWNER\'S NAME:</string>
    <string name="create_new_book">This will create a new Appointment Book if the specified owner is not found.</string>
    <string name="submit">SUBMIT</string>
    <string name="hello">Hello!</string>
    <string name="print_all">PRINT ALL APPOINTMENTS</string>
    <string name="add_appt">ADD A NEW APPOINTMENT</string>
    <string name="search_appt">SEARCH APPOINTMENTS</string>
    <string name="back_main_menu">BACK TO MAIN MENU</string>
    <string name="description">DESCRIPTION</string>
    <string name="begins_at">BEGINS AT:</string>
    <string name="ends_at">ENDS AT:</string>
    <string name="time_hint">TIME</string>
    <string name="new_appt_success">SUCCESS! NEW APPOINTMENT ADDED!</string>
    <string name="back_appt_book">BACK TO APPOINTMENT BOOK MENU</string>
    <string name="begin_between">APPOINTMENT BEGINS BETWEEN:</string>
    <string name="search_result_title">APPOINTMENT SEARCH RESULTS</string>
    <string name="no_appts_found">NO APPOINTMENTS FOUND DURING THAT TIME FRAME.</string>
    <string name="search_start">SEARCH START:</string>
    <string name="search_end">SEARCH END:</string>

    <string name="help_contents">
        Appointment Book Android App by Nora Luna\n\n

        This project is an Android appointment book. This app contains multiple appointment books owned by specific owners.\n
        First, search for your name to find your Appointment Book. If your Appointment Book does not already exist, it will be created when you submit your name.\n
        Once inside your Appointment Book you can print all your appointments, add a new appointment, or search for existing appointments by datetime.\n\n

        Adding a new Appointment:\n
        Make sure you include a description, start and end date time. Ensure the begin date time is before the end date time or you will receive an error message.\n
        You will know your appointment was added successfully if you see a success message on the screen.\n

        Searching for Appointments:\n
        You can search Appointments by their starting time. Please enter two datetimes to find the Appointments that start between the two times.\n
        You will see the Appointments printed between the two times, or an error message if none are found.\n
    </string>

    <!-- Default below -->



    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>