<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/printAll"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="30dp"
            android:text="@string/print_all"
            android:textSize="25sp" />

        <Button
            android:id="@+id/addNewAppt"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="30dp"
            android:text="@string/add_appt"
            android:textSize="25sp" />
        <Button
            android:id="@+id/searchAppts"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="30dp"
            android:text="@string/search_appt"
            android:textSize="25sp" />
        <Button
            android:id="@+id/help2"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="30dp"
            android:text="@string/help"
            android:textSize="25sp" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>