<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:gravity="center_horizontal"
            android:text="@string/owner_name"
            android:textSize="25sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/create_new_book"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/mainMenuName"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_box"
            android:hint="NAME"
            android:inputType="textPersonName"
            android:padding="30dp"
            android:textSize="25sp" />

        <Button
            android:id="@+id/submitOwnerName"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:padding="30dp"
            android:text="@string/submit"
            android:textSize="25sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#DDDDDD"/>

        <Button
            android:id="@+id/help"
            android:layout_width="300dp"
            android:padding="30dp"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/help"
            android:textSize="25sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#DDDDDD"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>