<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="edu.pdx.cs410J.nob.FirstFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_Help"
            app:destination="@id/Help" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="edu.pdx.cs410J.nob.SecondFragment"
        android:label="@string/hello"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_Help"
            app:destination="@id/Help" />
        <action
            android:id="@+id/action_SecondFragment_to_PrintAll"
            app:destination="@id/PrintAll" />
        <action
            android:id="@+id/action_SecondFragment_to_AddNewAppt"
            app:destination="@id/AddNewAppt" />
        <action
            android:id="@+id/action_SecondFragment_to_SearchAppts"
            app:destination="@id/SearchAppts" />
    </fragment>
    <fragment
        android:id="@+id/Help"
        android:name="edu.pdx.cs410J.nob.Help"
        android:label="@string/help"
        tools:layout="@layout/help">

    </fragment>
    <fragment
        android:id="@+id/PrintAll"
        android:name="edu.pdx.cs410J.nob.PrintAll"
        android:label="All Appointments"
        tools:layout="@layout/print_all">

    </fragment>
    <fragment
        android:id="@+id/AddNewAppt"
        android:name="edu.pdx.cs410J.nob.AddNewAppt"
        android:label="Add New Appointment"
        tools:layout="@layout/add_new_appt">
        <action
            android:id="@+id/action_AddNewAppt_to_SecondFragment"
            app:destination="@id/SecondFragment" />

    </fragment>
    <fragment
        android:id="@+id/SearchAppts"
        android:name="edu.pdx.cs410J.nob.SearchAppts"
        android:label="Search Appointments"
        tools:layout="@layout/search_appts">
        <action
            android:id="@+id/action_SearchAppts_to_SearchResults"
            app:destination="@id/SearchResults" />

    </fragment>
    <fragment
        android:id="@+id/SearchResults"
        android:name="edu.pdx.cs410J.nob.SearchResults"
        android:label="Appointment Search Results"
        tools:layout="@layout/search_results">

    </fragment>

</navigation>